vlib/v/checker/tests/infix_compare_optional_err.vv
fn foo() ?int{
	return 0
}

fn main(){
	if foo() > foo() {}
}
